--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,5 @@ PORT=5000
 # Frontend URL (update with your Vercel URL)
 FRONTEND_URL=https://your-portfolio.vercel.app
 
-# API URL (for production)
-REACT_APP_API_URL=https://your-portfolio.vercel.app/api
+# API URL (for production - optional, defaults to relative /api)
+VITE_API_URL=https://your-portfolio.vercel.app/api
