--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ NODE_ENV=production
 PORT=5000
 
 # Frontend URL (update with your Vercel URL)
-FRONTEND_URL=https://your-portfolio.vercel.app
+VITE_APP_URL=https://your-portfolio.vercel.app
 
 # API URL (for production - optional, defaults to relative /api)
 VITE_API_URL=https://your-portfolio.vercel.app/api
