Support VITE_API_URL_{DEV,PREVIEW,PROD} and VITE_APP_URL_{DEV,PREVIEW,PROD}; update CORS and frontend API resolution

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,21 @@ PORT=5000
 # Frontend URL (update with your Vercel URL)
 VITE_APP_URL=https://your-portfolio.vercel.app
 
-# API URL (for production - optional, defaults to relative /api)
+# API URL (optional, defaults to relative /api in production)
+# Global fallback
 VITE_API_URL=https://your-portfolio.vercel.app/api
+# Environment-specific (set as needed)
+VITE_API_URL_DEV=http://localhost:5000/api
+VITE_API_URL_PREVIEW=https://your-preview-url.vercel.app/api
+VITE_API_URL_PROD=https://your-portfolio.vercel.app/api
+
+# Frontend App URL (optional)
+# Global fallback
+VITE_APP_URL=https://your-portfolio.vercel.app
+# Environment-specific (set as needed)
+VITE_APP_URL_DEV=http://localhost:5173
+VITE_APP_URL_PREVIEW=https://your-preview-url.vercel.app
+VITE_APP_URL_PROD=https://your-portfolio.vercel.app
+
+# Frontend environment hint (optional: development | preview | production)
+VITE_APP_ENV=production
