Use catch-all API function (api/[...path].js); keep client-route rewrites for React Router (incl. /cms)

--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,8 @@
   },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
+      "source": "/((?!api|_next|static|assets|.*\\..*).*)",
+      "destination": "/index.html"
     }
   ]
 }
